<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hintUserId"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/editTextReadingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hintReadingDate" />

        <TextView
            android:id="@+id/editTextReadingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/hintReadingDate" />

        <EditText
            android:id="@+id/editTextSystolicReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hintSystolicReading"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDiastolicReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDiastolicReading"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/editTextCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hintCondition" />

        <Button
            android:id="@+id/buttonAddReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btnAddReading" />

        <Button
            android:id="@+id/buttonGoToReadings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go to readings" />

        <Button
            android:id="@+id/buttonGoToAverages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See Monthly Averages" />

    </LinearLayout>

</ScrollView>